# agar-rs

./: .gitignore
agar-backend/: Cargo.toml
agar-backend/src/: lib.rs  math.rs
client/: Cargo.toml  Makefile  agar_bg.wasm
client/src/: ext.rs  lib.rs
client/static/: ext.js  index.html  index.js
fs-server/: Cargo.toml
fs-server/src/: main.rs
fs-server/static/: .index.html.kak.36wyt4  agar.wasm  index.html
ws-server/: Cargo.toml
ws-server/src/: main.rs
