[package]
name = "agar"
version = "0.1.0"
authors = ["loovjo <jonathan.loov@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true


[dependencies]
lazy_static = "1"
agar-backend = { path = "../agar-backend/" }
wasm-bindgen = "0.2"
itertools = "0.6"

serde_json = { version = "1.0", optional = true }
serde_cbor = { version = "0.8", optional = true }

[features]
